# voice-pcm-text

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  app.cpp  app.h  idf_component.yml  main.cc  type_def.h  work_task.cpp  work_task.h
main/board/: board.cpp  board.h
main/board/voice_dev/: voice_dev_board.cpp  voice_dev_board.h
main/drivers/audio/: audio_es7210.cpp  audio_es7210.h  audio_es8311_es7210.cpp  audio_es8311_es7210.h  audio_hal.cpp  audio_hal.h  audio_input_interface.h  input_audio_process.cpp  input_audio_process.h  wav_recorder.cpp  wav_recorder.h
main/drivers/storage/: file_interface.h  sd_card.cpp  sd_card.h
main/resources/: p3.h
